# Relay

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
client/: package.json  pnpm-lock.yaml  wordlist.txt
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: error.rs  lib.rs
client/src-tauri/src/commands/: mod.rs  receive.rs  send.rs  transfer.rs
client/src-tauri/src/crypto/: aes_gcm.rs  checksum.rs  mod.rs  spake.rs
client/src-tauri/src/network/: mod.rs  quic.rs  relay.rs  signaling.rs  transport.rs
client/src-tauri/src/protocol/: chunker.rs  messages.rs  mod.rs  reassembler.rs
client/src-tauri/src/transfer/: code.rs  mod.rs  progress.rs  receiver.rs  sender.rs  session.rs
client/src-tauri/tests/: signaling_e2e.rs
client/src/components/: CodeDisplay.tsx  CodeInput.tsx  CompletionView.tsx  ConnectionStatus.tsx  FileList.tsx  ReceiveView.tsx  SendView.tsx  Settings.tsx  TransferProgress.tsx
client/src/lib/: format.ts  tauri-bridge.ts  wordlist.ts
client/src/stores/: settings.ts  transfer.ts
client/src/styles/: app.css
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
server/: Dockerfile  fly.toml  go.mod  handler.go  handler_test.go  health.go  main.go  relay.go  relay_test.go  server.go  server_test.go  session.go
