[package]
name = "relay"
version = "0.1.0"
description = "Share files. No cloud. No accounts. No bullshit."
authors = ["you"]
edition = "2021"

[lib]
name = "relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

# Crypto
ring = "0.17"
spake2 = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# WebSocket client (for signaling server)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_bytes = "0.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
